<resources>
    <string name="app_name">Covid-19 Cases</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_country_name">Enter Country Name</string>
    <string name="loading_data">Loading Data</string>
    <string name="search">Search</string>
    <string name="current_location">Current Location</string>
    <string name="india">India</string>
    <string name="error_no_data">No data returned from server. Please try again</string>
    <string name="error_network">Error fetching data. Please check network.</string>
    <string name="error_unknown">Unknown error. %1$s</string>
    <string name="ok">Ok</string>
    <string name="network_error">Network Error</string>
    <string name="flag_url">https://flagcdn.com/h40/%1$s.png</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="_4_825">4,825</string>
    <string name="active_cases">Active Cases</string>
    <string name="serious_critical">Serious/Critical</string>
    <string name="new_cases">New Cases</string>
    <string name="last_updated">Last Updated</string>
    <string name="last_changed">Last Changed</string>
</resources>