<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.CountryListFragment">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/density_pixel_10"
                android:paddingStart="@dimen/density_pixel_10"
                android:paddingEnd="@dimen/density_pixel_10"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    app:startIconDrawable="@drawable/ic_baseline_search_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:id="@+id/country_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/current_loctation_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/density_pixel_10"
                    android:layout_marginTop="@dimen/density_pixel_5"
                    android:layout_marginEnd="@dimen/density_pixel_10"
                    android:text="@string/current_location"
                    android:textSize="@dimen/scale_pixel_20">

                </TextView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/country_first_alphabet">

                    <ImageView
                        android:id="@+id/current_location_flag"
                        android:layout_width="@dimen/scale_pixel_40"
                        android:layout_height="@dimen/scale_pixel_40"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toStartOf="@+id/current_location_country_name_recy"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/current_location_country_name_recy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/scale_pixel_24"
                        android:text="@string/india"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/current_location_flag"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                </androidx.core.widget.NestedScrollView>


            </LinearLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="#00B8D4" />

        <TextView
            android:id="@+id/loading_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/loading_data"
            android:textColor="@color/white"
            android:visibility="gone" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
